--- a/src/GUIApp/View/main_window.fxml
+++ b/src/GUIApp/View/main_window.fxml
@@ -1,56 +1,130 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="400.0" maxWidth="700.0" minHeight="400.0" minWidth="700.0" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #2E3348;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUIApp.Controllers.MainWindowController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="700.0" style="-fx-background-color: #fafafa;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUIApp.Controllers.MainWindowController">
    <children>
-      <Label layoutX="7.0" layoutY="7.0" text="Настройка отрядов" textFill="WHITE">
+      <Label layoutX="11.0" layoutY="14.0" text="Настройка отрядов">
          <font>
             <Font name="System Bold" size="17.0" />
          </font>
       </Label>
-      <AnchorPane layoutY="33.0" prefHeight="368.0" prefWidth="700.0" style="-fx-background-color: #fafafa;">
+      <Button fx:id="startSimulationButton" layoutX="67.0" layoutY="241.0" mnemonicParsing="false" onAction="#startBattle" prefHeight="42.0" prefWidth="150.0" text="В бой!" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="45.0">
+         <font>
+            <Font name="System Bold" size="19.0" />
+         </font>
+      </Button>
+      <Button fx:id="openLogButton" disable="true" layoutX="222.0" layoutY="243.0" mnemonicParsing="false" onAction="#viewLog" prefHeight="42.0" prefWidth="257.0" text="Посмотреть ход битвы" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="222.0" AnchorPane.rightAnchor="221.0">
+         <font>
+            <Font name="System Bold" size="19.0" />
+         </font>
+      </Button>
+      <Label fx:id="winLabel" alignment="CENTER" layoutX="67.0" layoutY="187.0" prefHeight="18.0" prefWidth="567.0" text="Победил отряд такой-то!" textFill="#6ed035" visible="false">
+         <font>
+            <Font size="25.0" />
+         </font>
+      </Label>
+      <Button fx:id="newBattleBtn" disable="true" layoutX="501.0" layoutY="241.0" mnemonicParsing="false" onAction="#newBattle" prefHeight="42.0" prefWidth="150.0" text="Новая битва" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="45.0">
+         <font>
+            <Font name="System Bold" size="19.0" />
+         </font>
+      </Button>
+      <GridPane layoutX="18.0" layoutY="45.0" prefHeight="116.0" prefWidth="665.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="139.0" minWidth="10.0" prefWidth="123.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="161.0" minWidth="10.0" prefWidth="96.0" />
+            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="365.0" minWidth="10.0" prefWidth="291.0" />
+            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="337.0" minWidth="10.0" prefWidth="24.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="243.0" minWidth="10.0" prefWidth="140.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <TextField fx:id="firstSquadnameField" layoutX="14.0" layoutY="84.0" promptText="Имя" />
-            <TextField fx:id="firstSquadSizeField" layoutX="192.0" layoutY="84.0" prefHeight="25.0" prefWidth="85.0" promptText="Численность" />
-            <MenuButton fx:id="firstSquadExtraUnit" layoutX="601.0" layoutY="84.0" mnemonicParsing="false" text="Добавить">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Action 1" />
-                <MenuItem mnemonicParsing="false" text="Action 2" />
-              </items>
-            </MenuButton>
-            <Text layoutX="335.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Добавить бойца определенного класса">
+            <Label prefWidth="82.0" text="Первый отряд:" />
+            <TextField fx:id="firstSquadnameField" prefHeight="26.0" prefWidth="136.0" promptText="Имя" GridPane.rowIndex="1">
+               <tooltip>
+                  <Tooltip text="Введите название первого отряда" />
+               </tooltip>
+               <GridPane.margin>
+                  <Insets right="5.0" />
+               </GridPane.margin>
+            </TextField>
+            <TextField fx:id="firstSquadSizeField" prefHeight="26.0" prefWidth="94.0" promptText="Численность" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <tooltip>
+                  <Tooltip text="Количество случайно созданных бойцов" />
+               </tooltip>
+               <GridPane.margin>
+                  <Insets right="5.0" />
+               </GridPane.margin>
+            </TextField>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Добавлено бойцов определенного класса:" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <font>
                   <Font size="14.0" />
                </font>
+               <GridPane.margin>
+                  <Insets right="5.0" />
+               </GridPane.margin>
             </Text>
-            <Label layoutX="14.0" layoutY="67.0" text="Первый отряд:" />
-            <TextField fx:id="secondSquadnameField" layoutX="14.0" layoutY="145.0" promptText="Имя" />
-            <TextField fx:id="secondSquadSizeField" layoutX="192.0" layoutY="145.0" prefHeight="25.0" prefWidth="85.0" promptText="Численность" />
-            <MenuButton fx:id="secondSquadExtraUnit" layoutX="601.0" layoutY="145.0" mnemonicParsing="false" text="Добавить">
-               <items>
-                  <MenuItem mnemonicParsing="false" text="Action 1" />
-                  <MenuItem mnemonicParsing="false" text="Action 2" />
-               </items>
-            </MenuButton>
-            <Text layoutX="335.0" layoutY="163.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Добавить бойца определенного класса">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Text>
-            <Label layoutX="14.0" layoutY="128.0" text="Второй отряд:" />
-            <Button fx:id="startSimulation" layoutX="250.0" layoutY="268.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="200.0" text="В бой!">
-               <font>
-                  <Font name="System Bold" size="19.0" />
-               </font>
+            <Button fx:id="addUnit_1_btn" mnemonicParsing="false" onAction="#addUnit1" text="Добавить из списка" textAlignment="CENTER" GridPane.columnIndex="4" GridPane.rowIndex="1">
+               <tooltip>
+                  <Tooltip text="Перейти к окну добавления бойцов" />
+               </tooltip>
             </Button>
-         </children></AnchorPane>
+            <Label text="Второй отряд:" GridPane.rowIndex="2" />
+            <TextField fx:id="secondSquadnameField" prefHeight="26.0" prefWidth="136.0" promptText="Имя" GridPane.rowIndex="3">
+               <tooltip>
+                  <Tooltip text="Введите название второго отряда" />
+               </tooltip>
+               <GridPane.margin>
+                  <Insets right="5.0" />
+               </GridPane.margin>
+            </TextField>
+            <TextField fx:id="secondSquadSizeField" prefHeight="26.0" prefWidth="94.0" promptText="Численность" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <tooltip>
+                  <Tooltip text="Количество случайно созданных бойцов" />
+               </tooltip>
+               <GridPane.margin>
+                  <Insets right="5.0" />
+               </GridPane.margin>
+            </TextField>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Добавлено бойцов определенного класса:" GridPane.columnIndex="2" GridPane.rowIndex="3">
+               <font>
+                  <Font size="14.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets right="5.0" />
+               </GridPane.margin>
+            </Text>
+            <Button fx:id="addUnit_2_btn" mnemonicParsing="false" onAction="#addUnit2" text="Добавить из списка" textAlignment="CENTER" GridPane.columnIndex="4" GridPane.rowIndex="3">
+               <tooltip>
+                  <Tooltip text="Перейти к окну добавления бойцов" />
+               </tooltip>
+            </Button>
+            <Text fx:id="extraUnitsSquad1" strokeType="OUTSIDE" strokeWidth="0.0" text="0" GridPane.columnIndex="3" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text fx:id="extraUnitsSquad2" strokeType="OUTSIDE" strokeWidth="0.0" text="0" GridPane.columnIndex="3" GridPane.rowIndex="3">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
