--- a/src/GUIApp/view/main_window.fxml
+++ b/src/GUIApp/view/main_window.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="700.0" style="-fx-background-color: #fafafa;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUIApp.Controllers.MainWindowController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="737.0" style="-fx-background-color: #fafafa;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUIApp.controllers.MainWindowController">
    <children>
       <Label layoutX="11.0" layoutY="14.0" text="Настройка отрядов">
          <font>
@@ -24,23 +24,24 @@
             <Font name="System Bold" size="19.0" />
          </font>
       </Button>
-      <Button fx:id="openLogButton" disable="true" layoutX="222.0" layoutY="243.0" mnemonicParsing="false" onAction="#viewLog" prefHeight="42.0" prefWidth="257.0" text="Посмотреть ход битвы" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="222.0" AnchorPane.rightAnchor="221.0">
+      <Button fx:id="openLogButton" layoutX="222.0" layoutY="243.0" mnemonicParsing="false" onAction="#viewLog" prefHeight="42.0" prefWidth="257.0" text="Посмотреть ход битвы" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="222.0" AnchorPane.rightAnchor="221.0">
          <font>
             <Font name="System Bold" size="19.0" />
          </font>
       </Button>
-      <Button fx:id="newBattleBtn" disable="true" layoutX="501.0" layoutY="241.0" mnemonicParsing="false" onAction="#newBattle" prefHeight="42.0" prefWidth="150.0" text="Новая битва" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="45.0">
+      <Button fx:id="newBattleBtn" layoutX="501.0" layoutY="241.0" mnemonicParsing="false" onAction="#newBattle" prefHeight="42.0" prefWidth="150.0" text="Новая битва" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="45.0">
          <font>
             <Font name="System Bold" size="19.0" />
          </font>
       </Button>
-      <GridPane layoutX="18.0" layoutY="45.0" prefHeight="116.0" prefWidth="665.0">
+      <GridPane layoutX="18.0" layoutY="45.0" prefHeight="116.0" prefWidth="711.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="139.0" minWidth="10.0" prefWidth="123.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="161.0" minWidth="10.0" prefWidth="96.0" />
-            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="365.0" minWidth="10.0" prefWidth="291.0" />
-            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="337.0" minWidth="10.0" prefWidth="24.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="243.0" minWidth="10.0" prefWidth="140.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="139.0" minWidth="10.0" prefWidth="104.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="161.0" minWidth="10.0" prefWidth="95.0" />
+            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="365.0" minWidth="10.0" prefWidth="311.0" />
+            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="337.0" minWidth="6.0" prefWidth="22.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="243.0" minWidth="10.0" prefWidth="72.0" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="243.0" minWidth="10.0" prefWidth="107.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -74,7 +75,7 @@
                   <Insets right="5.0" />
                </GridPane.margin>
             </Text>
-            <Button fx:id="addUnit_1_btn" mnemonicParsing="false" onAction="#addUnit1" text="Добавить из списка" textAlignment="CENTER" GridPane.columnIndex="4" GridPane.rowIndex="1">
+            <Button fx:id="addUnit_1_btn" mnemonicParsing="false" onAction="#addUnit1" text="Добавить" textAlignment="CENTER" GridPane.columnIndex="4" GridPane.rowIndex="1">
                <tooltip>
                   <Tooltip text="Перейти к окну добавления бойцов" />
                </tooltip>
@@ -104,7 +105,7 @@
                   <Insets right="5.0" />
                </GridPane.margin>
             </Text>
-            <Button fx:id="addUnit_2_btn" mnemonicParsing="false" onAction="#addUnit2" text="Добавить из списка" textAlignment="CENTER" GridPane.columnIndex="4" GridPane.rowIndex="3">
+            <Button fx:id="addUnit_2_btn" mnemonicParsing="false" onAction="#addUnit2" text="Добавить" textAlignment="CENTER" GridPane.columnIndex="4" GridPane.rowIndex="3">
                <tooltip>
                   <Tooltip text="Перейти к окну добавления бойцов" />
                </tooltip>
@@ -119,9 +120,15 @@
                   <Font size="14.0" />
                </font>
             </Text>
+            <Button fx:id="showSquad1_btn" mnemonicParsing="false" onAction="#showSquad1" text="Показать отряд" textAlignment="CENTER" GridPane.columnIndex="5" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </Button>
+            <Button fx:id="showSquad2_btn" mnemonicParsing="false" onAction="#showSquad2" text="Показать отряд" textAlignment="CENTER" GridPane.columnIndex="5" GridPane.rowIndex="3" />
          </children>
       </GridPane>
-      <Label fx:id="winLabel" alignment="CENTER" layoutX="67.0" layoutY="187.0" prefHeight="18.0" prefWidth="567.0" text="Победил отряд такой-то!" textFill="#6ed035" visible="false">
+      <Label fx:id="winLabel" alignment="CENTER" layoutX="67.0" layoutY="187.0" prefHeight="18.0" prefWidth="567.0" text="Победил отряд такой-то!" textFill="#6ed035">
          <font>
             <Font size="25.0" />
          </font>
