--- a/src/GUIApp/view/log_window.fxml
+++ b/src/GUIApp/view/log_window.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -8,23 +9,29 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="750.0" style="-fx-background-color: #fafafa;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUIApp.controllers.LogWindowController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="570.0" prefWidth="480.0" style="-fx-background-color: #fafafa;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUIApp.controllers.LogWindowController">
    <children>
       <Label fx:id="titleLabel" layoutX="14.0" layoutY="14.0" text="Ход битвы">
          <font>
             <Font name="System Bold" size="17.0" />
          </font>
       </Label>
-      <ScrollPane layoutX="14.0" layoutY="47.0">
+      <ScrollPane fitToWidth="true" layoutX="14.0" layoutY="47.0" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="50.0">
          <content>
-            <TextFlow fx:id="logTextWlow" prefHeight="484.0" prefWidth="720.0">
+            <TextFlow fx:id="logTextWlow" minWidth="-Infinity" prefHeight="450.0" prefWidth="458.0">
                <children>
-                  <Text fx:id="logText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="412.13671875" />
+                  <Text fx:id="logText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="279.13671875" />
                </children>
+               <padding>
+                  <Insets left="5.0" right="5.0" />
+               </padding>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
             </TextFlow>
          </content>
       </ScrollPane>
-      <Button fx:id="okBtn" layoutX="330.0" layoutY="544.0" mnemonicParsing="false" onAction="#pressOk" prefHeight="26.0" prefWidth="90.0" text="Ок">
+      <Button fx:id="okBtn" layoutX="195.0" layoutY="514.0" mnemonicParsing="false" onAction="#pressOk" prefHeight="26.0" prefWidth="90.0" text="Ок" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="195.0" AnchorPane.rightAnchor="195.0">
          <font>
             <Font name="System Bold" size="19.0" />
          </font>
